--- a/FarmshipIOS/FarmshipIOS/Base.lproj/Main.storyboard
+++ b/FarmshipIOS/FarmshipIOS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="wS9-EW-Wjp">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FarmshipIOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="FarmshipIOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -20,12 +20,63 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uzK-5m-aQb">
+                                <rect key="frame" x="0.0" y="64" width="375" height="40"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="KNq-lV-qzx">
+                                        <rect key="frame" x="50" y="6" width="275" height="29"/>
+                                        <segments>
+                                            <segment title="VEGITABLES"/>
+                                            <segment title="FRUITS"/>
+                                            <segment title="GRAINS"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="segmentAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="rGe-c4-6qT"/>
+                                        </connections>
+                                    </segmentedControl>
+                                </subviews>
+                                <color key="backgroundColor" red="0.1450980392" green="0.6588235294" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="KNq-lV-qzx" firstAttribute="centerY" secondItem="uzK-5m-aQb" secondAttribute="centerY" id="M7l-9W-NQY"/>
+                                    <constraint firstAttribute="height" constant="40" id="sP0-ZG-N1W"/>
+                                    <constraint firstItem="KNq-lV-qzx" firstAttribute="centerX" secondItem="uzK-5m-aQb" secondAttribute="centerX" id="vwO-K2-HiX"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="uzK-5m-aQb" secondAttribute="trailing" id="VdO-3i-UkV"/>
+                            <constraint firstItem="uzK-5m-aQb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="a6n-bs-ez0"/>
+                            <constraint firstItem="uzK-5m-aQb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hdR-lv-XOe"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="qMd-y2-WtN"/>
+                    <connections>
+                        <outlet property="segmentController" destination="KNq-lV-qzx" id="DDN-n5-g2M"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="366" y="90"/>
+            <point key="canvasLocation" x="1304.8" y="89.505247376311857"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yuc-xj-ott">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wS9-EW-Wjp" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ndf-4o-8xb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="jdV-ho-VMi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yc0-yg-y3l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="365.60000000000002" y="89.505247376311857"/>
         </scene>
     </scenes>
 </document>
